# ERIC_A

./: .gitignore  .gitmodules  README.md
eric_a/: CMakeLists.txt  package.xml
eric_a_bringup/: CMakeLists.txt  motor_input.txt  package.xml  setup.py
eric_a_bringup/config/: motion.yaml
eric_a_bringup/include/eric_a_bringup/: eric_a_control.h
eric_a_bringup/launch/: eric_a_motor.launch  eric_a_remote.launch  eric_a_robot _test.launch  eric_a_robot.launch  eric_a_robot_test.launch  eric_a_simulation.launch  test.launch
eric_a_bringup/launch/include/: description.launch.xml
eric_a_bringup/msg/: MotorPacket.msg
eric_a_bringup/nodes/: eric_a_motor_node.py
eric_a_bringup/scripts/: build.sh  create_udev_rules.sh
eric_a_bringup/src/: eric_a_control.cpp
eric_a_description/: CMakeLists.txt  package.xml
eric_a_description/launch/: display.launch  gazebo.launch
eric_a_description/meshes/: base_scan.STL  wheel_left_link.STL  wheel_right_link.STL
eric_a_description/meshes/bases/: omo_r1_body.stl
eric_a_description/meshes/sensors/: omo_r1_camera.stl
eric_a_description/meshes/wheels/: omo_r1_wheel.stl
eric_a_description/rviz/: model.rviz
eric_a_description/urdf/: common_properties.xacro  common_property.xacro  eric_a.urdf  eric_a.urdf.xacro  erica.csv  omo_r1.urdf.g2.xacro  omo_r1.urdf.xacro
eric_a_gazebo/: CMakeLists.txt  package.xml
eric_a_gazebo/launch/: eric_a_112.launch  omo_r1_empty_world.launch  omo_r1_erica.launch  omo_r1_gazebo_rviz.launch  omo_r1_turtlebot3_house.launch  omo_r1_turtlebot3_world.launch
eric_a_gazebo/models/erica/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/3d_sofa/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/3d_sofa/meshes/: Sofa.stl
eric_a_gazebo/models/erica/elements/bot10/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/bot10/materials/scripts/: textures.material
eric_a_gazebo/models/erica/elements/cabinet1/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/cabinet1/meshes/: model.dae
eric_a_gazebo/models/erica/elements/cabinet2/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/cabinet2/meshes/: model.dae
eric_a_gazebo/models/erica/elements/h_bookshelf/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/h_chair/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/h_chair/meshes/: chair.dae
eric_a_gazebo/models/erica/elements/h_table/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/h_table2/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/h_table3/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/h_ur10/: model.config  ur10.sdf
eric_a_gazebo/models/erica/elements/h_wall/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/kitchen/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/kitchen/meshes/: model.dae
eric_a_gazebo/models/erica/elements/table1_chair/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/table1_chair_tv/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/tv16/: model.config  model.sdf
eric_a_gazebo/models/erica/elements/tv16/meshes/: tv16.stl
eric_a_gazebo/sdf/: eric_a.gazebo.xacro  omo_r1.gazebo.xacro
eric_a_gazebo/worlds/: erica_112.world
eric_a_navigation/: CMakeLists.txt  package.xml  setup.py
eric_a_navigation/config/: base_global_planner_param.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  ekf_localization.yaml  ekf_localization_laplace.yaml  ekf_localization_test.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.yaml  teb_local_planner_params.yaml
eric_a_navigation/launch/: amcl.launch  emcl2.launch  emcl2nav.launch  eric_a_configuration.launch  eric_a_navigation.launch  eric_a_pose_estimate.launch  mcl.launch  move_base.launch
eric_a_navigation/nodes/: eric_a_classnumber.py  eric_a_costmap_clear.py  eric_a_goal.py  eric_a_goalserver.py  goal.py  init_pose.py
eric_a_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_localization.yaml  ekf_localization_laplace.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
eric_a_navigation/srv/: ClassNumber.srv  Destination.srv  Speak.srv
eric_a_sensor/eric_a_IMU/: CMakeLists.txt  package.xml
eric_a_sensor/eric_a_IMU/launch/: eric_a_imu.launch  iahrs_driver.launch
eric_a_sensor/eric_a_IMU/src/: iahrs_driver.cpp
eric_a_sensor/eric_a_sensor/: CMakeLists.txt  package.xml
eric_a_service/eric_a_obstacle_detect/: CMakeLists.txt  package.xml  setup.py
eric_a_service/eric_a_obstacle_detect/nodes/: eric_a_obstacle_detect
eric_a_service/eric_a_obstacle_detect/srv/: PlaySong.srv
eric_a_service/eric_a_service/: CMakeLists.txt  package.xml
eric_a_service/eric_a_servo/: CMakeLists.txt  package.xml
eric_a_service/eric_a_servo/config/: basic.yaml  joint_1.0.yaml  motion.yaml
eric_a_service/eric_a_servo/dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt
eric_a_service/eric_a_servo/dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch
eric_a_service/eric_a_servo/dynamixel-workbench/dynamixel_workbench_controllers/src/: dynamixel_control.cpp  dynamixel_workbench_controllers.cpp
eric_a_service/eric_a_servo/include/eric_a_servo/: dynamixel_workbench_controllers.h
eric_a_service/eric_a_servo/launch/: eric_a_dynamixel.launch  eric_a_dynamixel_controller.launch  eric_a_dynamixel_operator.launch  eric_a_serial.launch
eric_a_service/eric_a_servo/src/: dynamixel_control.cpp  dynamixel_workbench_controllers.cpp  trajectory_generator.cpp
eric_a_slam/: CMakeLists.txt  package.xml
eric_a_slam/config/: gampping.yaml
eric_a_slam/launch/: eric_a_gmapping.launch  eric_a_slam.launch
eric_a_slam/map/: eric_a.yaml  jeonghan.pgm  jeonghan.yaml  jeonghan2.pgm  jeonghan2.yaml  jongchan1.yaml  map.pgm  map.yaml
eric_a_teleop/: CMakeLists.txt  package.xml  setup.py
eric_a_teleop/launch/: eric_a_teleop.launch
eric_a_teleop/nodes/: eric_a_teleop  eric_a_teleop.py
(+19 files in other folders)
