<?xml version="1.0"?>
<package format="2">
  <name>eric_a</name>
  <version>0.0.0</version>
  <description>ERIC_A metapackage</description>
  <author email="kimjh9813@naver.com">jeonghan</author>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>eric_a_bringup</exec_depend>
  <exec_depend>eric_a_description</exec_depend>
  <exec_depend>eric_a_sensor</exec_depend>
  <exec_depend>eric_a_navigation</exec_depend>
  <!-- <exec_depend>eric_a_sensor</exec_depend> -->
  <export><metapackage/></export>
</package>
