<?xml version="1.0"?>
<package format="2">
  <name>eric_a_bringup</name>
  <version>0.0.0</version>
  <description>The eric_a_bringup package</description>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <!-- <depend>rospy</depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
