<?xml version="1.0"?>
<package format="2">
  <name>eric_a_navigation</name>
  <version>0.0.1</version>
  <description> ERIC_A navigation package
  </description>
  <author email="kimjh9813@naver.com">jeonghan</author>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer> 
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_localization</depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>move_base</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
</package>
